--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ a {
 	padding: 15px 40px;
 	border: none;
 	background: rgb(208,255,113);
-	background-image: url('shopping_cart.png');
+	background-image: url('tg_button.png');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 25px;
@@ -72,7 +72,7 @@ a {
 .btn:hover {
 	transform: scale(1.1);
 	background: rgb(248,168,24);
-	background-image: url('shopping_cart.png');
+	background-image: url('tg_button.png');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 18px;
