--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a {
 .inner {
 	right: 100;
 	display: grid;
-	grid-template-rows: 280px 280px;
+	grid-template-rows: 150px 150px 150px;
 }
 
 .item {
