--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ a {
 .item {
 	margin: 0;
 	padding: 0;
-	text-align: center;
-	align-items: center;
+	text-align: left;
+	align-items: left;
 	height: 100px;
 }
 	
@@ -36,7 +36,7 @@ a {
 	border: none;
 	background-repeat: no-repeat;
 	background-position: center;
-	background-size: 45px;
+	background-size: 47px;
 	border-radius: 25px;
 	text-transform: uppercase;
 	font-weight: 700;
