--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a {
 .inner {
 	right: 100;
 	display: grid;
-	grid-template-rows: 150px 150px 150px;
+	grid-template-rows: 150px 150px 150px 150px;
 }
 
 .item {
