--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ a {
 	border-radius: 25px;
 	text-transform: uppercase;
 	font-weight: 700;
-	transition: background .2s linear;
+	transition: background 2s linear;
 }
 
 .btn:hover {
@@ -62,6 +62,21 @@ a {
 #btn3 {
 	background-image: url('inst_button.png');
 }
+
+#btnclose {
+	display: inline-block;
+	padding: 25px 25px;
+	border: none;
+	background-image: url('back_button.png');
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 25px;
+	border-radius: 25px;
+	text-transform: uppercase;
+	font-weight: 700;
+	transition: background 2s linear;
+}
+	
 
 .usercard {
 	text-align: center;
