--- a/style.css
+++ b/style.css
@@ -51,7 +51,17 @@ a {
 }
 
 #btn1 {
+	display: inline-block;
+	padding: 25px 40px;
+	border: none;
 	background-image: url('tg_button.png');
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 47px;
+	border-radius: 5px;
+	text-transform: uppercase;
+	font-weight: 700;
+	transition: background 2s linear;
 }
 
 #btn2 {
