--- a/style.css
+++ b/style.css
@@ -82,11 +82,11 @@ a {
 	display: inline-block;
 	padding: 20px 20px;
 	border: none;
-	background-image: url('back_button.png');
+	background-image: url('close_button.jpg');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 40px;
-	border-radius: 20px;
+	border-radius: 5px;
 	text-transform: uppercase;
 	font-weight: 700;
 	transition: background 2s linear;
